--- a/sidebar.html
+++ b/sidebar.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Miro Widget Counter</title>
+    <title>Miro Jira Stats</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="sidebar__content">
       <div id="stat-container" class="stat-list">
-        <div class="stat-list__header">Widget Counter</div>
+        <div class="stat-list__header">Jira Stats</div>
       </div>
     </div>
     <script src="https://miro.com/app/static/sdk.1.1.js"></script>
